--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/iglenwoo/osu-class-bot#readme",
   "dependencies": {
     "@slack/web-api": "^5.0.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.16.4",
     "request": "^2.88.0"
   }
