--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@slack/web-api": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.16.4",
+    "prettier": "^1.17.0",
     "request": "^2.88.0"
   }
 }
