--- a/now.json
+++ b/now.json
@@ -2,6 +2,6 @@
   "version": 2,
   "name": "express",
   "builds": [
-    { "src": "**/*js", "use": "@now/node" }
+    { "src": "**/*.js", "use": "@now/node" }
   ]
 }
