--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/iglenwoo/class-beaver#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0",
     "prettier": "^1.17.0"
