--- a/now.json
+++ b/now.json
@@ -6,6 +6,8 @@
   ],
   "routes": [
     { "src": "/class", "dest": "src/server/index.js" },
-    { "src": "/prof", "dest": "src/server/index.js" }
+    { "src": "/prof", "dest": "src/server/index.js" },
+    { "src": "/auth", "dest": "src/server/index.js" },
+    { "src": "/auth/redirect", "dest": "src/server/index.js" }
   ]
 }
